src/main/default/objects/Ticket_Log__c/Ticket_Log__c.object-meta.xml
<CustomObject>
    <label>Ticket Log</label>
    <nameField>
        <displayFormat>Log-{0}</displayFormat>
        <label>Ticket Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>