src/main/default/objects/Ticket_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Activity recorded by the log entry.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rig Up</fullName>
            </value>
            <value>
                <fullName>Safe Meeting</fullName>
            </value>
            <value>
                <fullName>Run Job</fullName>
            </value>
            <value>
                <fullName>Rig Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>