src/main/default/objects/Ticket_Log__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Ticket Logs</relationshipLabel>
    <relationshipName>Ticket_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>