src/main/default/objects/Ticket_Log__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <inlineHelpText>Date and time the activity started.</inlineHelpText>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>