src/main/default/objects/Ticket_Log__c/fields/Stop_Time__c.field-meta.xml
<CustomField>
    <fullName>Stop_Time__c</fullName>
    <inlineHelpText>Date and time the activity finished.</inlineHelpText>
    <label>Stop Time</label>
    <type>DateTime</type>
</CustomField>