src/main/default/objects/Ticket_Log__c/fields/SyncID__c.field-meta.xml
<CustomField>
    <fullName>SyncID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier assigned automatically after syncing.</inlineHelpText>
    <label>SyncID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>