src/main/default/objects/Ticket_Log__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <inlineHelpText>Ticket for which the log entry was recorded.</inlineHelpText>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Ticket Logs</relationshipLabel>
    <relationshipName>Ticket_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>